<resources>
    <string name="app_name">MisFinanzas</string>
    <string name="nombreApp">Mis Finanzas</string>
    <string name="btn_iniciarSesion">Iniciar sesión</string>
    <string name="btn_crearUsuario">Crear usuario</string>
    <string name="login_HintUsuario">Nombre de usuario</string>
    <string name="login_HintPasswd">Contraseña</string>
    <string name="mainScreenDatePlaceHolder">PLACEHOLDER: 27/03/2023</string>
    <string name="radiobtnGasto">Gasto</string>
    <string name="radiobtnGanancia">Ganancia</string>
    <string name="firstloginWelcome">Bienvenido, </string>
    <string name="firstloginCapitalActual">Antes de comenzar, necesitamos saber tu capital actual.</string>
    <string name="formatoMovimientoDigital">Digital</string>
    <string name="formatoMovimientoMetalico">Metálico</string>
    <string name="firstLoginBtnListo">Listo</string>
    <string name="nuevoMovimiento">Nuevo movimiento</string>
    <string name="comoestas">¿Cómo estás?</string>
    <string name="verMovimientos">Ver movimientos</string>
    <string name="mes">Mes</string>
    <string name="seisMeses">6 m.</string>
    <string name="year">Año</string>
    <string name="promedioGanancia">Media de ganancia:</string>
    <string name="promedioGasto">Media de gasto:</string>
    <string name="ahoraTienes">Ahora mismo tienes:</string>
    <string name="informes">Informes</string>
    <string name="concepto">CONCEPTO</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="fecha">FECHA</string>
    <string name="no_movs_registrados">No hay movimientos registrados para este día.</string>
    <string name="dia">Día</string>
    <string name="totalMovimientos">Movimientos totales:</string>
    <string name="totalGanancias">Total ganancias:</string>
    <string name="totalGastos">Total gastos:</string>
    <string name="yaExisteUsuario">Ya existe un usuario con ese nombre.</string>
    <string name="noMasDe2Decimales">La cantidad introducida no debe tener más de 2 decimales.</string>
    <string name="eligeGananciaOGasto">Debes elegir si el movimiento es una ganancia o un gasto.</string>
    <string name="eligeMetalicoODigital">Debes elegir si el movimiento en metálico o digital.</string>
    <string name="introduceConcepto">Debes introducir un concepto.</string>
    <string name="introduceCantidad">Debes introducir una cantidad.</string>
    <string name="badPassword">La contraseña es incorrecta.</string>
    <string name="noPuedeMandarEmail">No se puede mandar una lista vacía por correo.</string>
    <string name="informeDelDia">Informe de movimientos del día</string>
    <string name="movsRegistrados">movimientos registrados</string>
    <string name="metalico">Metálico</string>
    <string name="digital">Digital</string>
    <string name="config_usuario">Configuración de:</string>
    <string name="actualizar">Actualizar</string>
    <string name="introduceNombre">Debes introducir un nombre.</string>
    <string name="introducePass">Debes introducir una contraseña.</string>
    <string name="cambiar_nombre_de_usuario">Configuración de usuario</string>
    <string name="exportarMovsAJson">Exportar movimientos a JSON</string>
    <string name="traspaso">Traspaso</string>
    <string name="debeDevolver">Se debe devolver</string>
    <string name="enFechaEspecifica">En fecha específica</string>
    <string name="paraQuien">Para quién</string>
</resources>