<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pantallaPrincipalBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstloginWelcome"
        android:textSize="30sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comoestas"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_marginRight="40dp">

    </TextView>

    <TextView
        android:id="@+id/pantallaPrincipalAhoraTienes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ahoraTienes"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_marginRight="40dp">
    </TextView>




    <Button
        android:id="@+id/pantallaPrincipalNuevoMov"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:text="@string/nuevoMovimiento">

    </Button>

    <Button
        android:id="@+id/pantallaPrincipalVerMovimientos"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:text="@string/informes">

    </Button>





</LinearLayout>