<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firstLoginBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstloginWelcome"
        android:textSize="30sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstloginCapitalActual"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_marginRight="40dp">

    </TextView>

    <EditText
        android:id="@+id/firstLoginMetalET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="40sp"
        android:hint="@string/metalico"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:digits="0123456789,."
        android:maxLength="13">

    </EditText>

    <EditText
        android:id="@+id/firstLoginDigitalET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="40sp"
        android:hint="@string/digital"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:digits="0123456789,."
        android:maxLength="13">

    </EditText>

    <Button
        android:id="@+id/firstLoginBotonListo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="40sp"
        android:text="@string/firstLoginBtnListo">

    </Button>





</LinearLayout>