<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/configScreenTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_usuario"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">




        <EditText
            android:id="@+id/configUserNombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_HintUsuario"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp">

        </EditText>

        <EditText
            android:id="@+id/configUserPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_HintPasswd"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:inputType="textPassword">

        </EditText>

        <Button
            android:id="@+id/configScreenActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/actualizar">

        </Button>





    </LinearLayout>





</LinearLayout>