<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200">

    <TextView
        android:id="@+id/conceptoAdapterMovimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/concepto"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

    </TextView>
    <TextView
        android:id="@+id/formatoAdapterMovimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metalico"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold">

    </TextView>
    <TextView
        android:id="@+id/cantidadAdapterMovimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold">

    </TextView>
</LinearLayout>